--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.85MB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇬🇧 英国-3.25MB/s(Youtube:不良林), server: 88.150.137.201, port: 1021, type: ssr, cipher: aes-128-ctr, password: sEscPBiAD9K$&@79, protocol: auth_aes128_md5, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
+  - {name: 🇺🇸 美国-5.73MB/s(Youtube:不良林), server: usyy.884899.cf, port: 443, type: trojan, password: 2debb06b-95ce-4e9b-956a-6cf7cadac30c, sni: usyy.884899.cf, skip-cert-verify: true}
   - {name: 🇺🇸 美国-2.95MB/s(Youtube:不良林), server: 104.166.135.10, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 104.166.135.10}}
-  - {name: 🇮🇹 意大利-610.9KB/s(Youtube:不良林), server: 92.223.93.233, port: 1035, type: ss, cipher: chacha20-ietf-poly1305, password: )1N1E6v0SU_rGTpg}
-  - {name: 🇯🇵 日本-317.5KB/s(Youtube:不良林), server: 89.31.126.171, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇩🇪 德国-3.17MB/s(Youtube:不良林), server: 162.55.231.78, port: 443, type: ssr, cipher: aes-128-ctr, password: sEscPBiAD9K$&@79, protocol: auth_aes128_md5, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
-  - {name: 🇸🇬 新加坡-1.11MB/s(Youtube:不良林), server: 81.90.189.18, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-4.71MB/s(Youtube:不良林), server: 172.96.192.58, port: 254, type: ss, cipher: aes-256-cfb, password: bwhskrskr03}
-  - {name: 🇺🇸 美国-5.25MB/s(Youtube:不良林), server: 150.230.43.106, port: 54829, type: vmess, uuid: f2b5c3ff-86c7-4efa-831f-ff0fcd7656a5, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.13MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-556.9KB/s(Youtube:不良林), server: 194.124.35.40, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-322.1KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇫🇷 法国-884.9KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇸🇬 新加坡-310.3KB/s(Youtube:不良林), server: 194.124.35.42, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇸🇬 新加坡-685.2KB/s(Youtube:不良林), server: 81.90.189.18, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-1.96MB/s(Youtube:不良林), server: sgg.2046.gq, port: 4443, type: trojan, password: 794871c6-022b-4498-b816-296e8a581d86, sni: sgg.2046.gq, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.50MB/s(Youtube:不良林), server: ss2.2046.gq, port: 4443, type: trojan, password: 794871c6-022b-4498-b816-296e8a581d86, sni: ss2.2046.gq, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-551.5KB/s(Youtube:不良林), server: 41.216.177.41, port: 443, type: trojan, password: 274c1b23-2bfe-40ac-943c-ebc1aa044b22, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.73MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-610.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-317.5KB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.17MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.25MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.13MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-556.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-322.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-884.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-310.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-685.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.50MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-551.5KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.73MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-610.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-317.5KB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.17MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.25MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.13MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-556.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-322.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-884.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-310.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-685.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.50MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-551.5KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.73MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-610.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-317.5KB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.17MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.25MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.13MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-556.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-322.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-884.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-310.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-685.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.50MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-551.5KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.73MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-610.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-317.5KB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.17MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.25MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.13MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-556.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-322.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-884.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-310.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-685.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.50MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-551.5KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.73MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-610.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-317.5KB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.17MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.25MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.13MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-556.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-322.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-884.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-310.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-685.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.50MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-551.5KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.73MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-610.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-317.5KB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.17MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.25MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.13MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-556.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-322.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-884.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-310.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-685.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.50MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-551.5KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.73MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-610.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-317.5KB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.17MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.25MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.13MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-556.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-322.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-884.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-310.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-685.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.50MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-551.5KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
