--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-5.73MB/s(Youtube:不良林), server: usyy.884899.cf, port: 443, type: trojan, password: 2debb06b-95ce-4e9b-956a-6cf7cadac30c, sni: usyy.884899.cf, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.95MB/s(Youtube:不良林), server: 104.166.135.10, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 104.166.135.10}}
-  - {name: 🇸🇬 新加坡-556.9KB/s(Youtube:不良林), server: 194.124.35.40, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-322.1KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇫🇷 法国-884.9KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇸🇬 新加坡-310.3KB/s(Youtube:不良林), server: 194.124.35.42, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇸🇬 新加坡-685.2KB/s(Youtube:不良林), server: 81.90.189.18, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-1.96MB/s(Youtube:不良林), server: sgg.2046.gq, port: 4443, type: trojan, password: 794871c6-022b-4498-b816-296e8a581d86, sni: sgg.2046.gq, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.50MB/s(Youtube:不良林), server: ss2.2046.gq, port: 4443, type: trojan, password: 794871c6-022b-4498-b816-296e8a581d86, sni: ss2.2046.gq, skip-cert-verify: true}
-  - {name: 🇳🇱 荷兰-551.5KB/s(Youtube:不良林), server: 41.216.177.41, port: 443, type: trojan, password: 274c1b23-2bfe-40ac-943c-ebc1aa044b22, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-314.1KB/s(Youtube:不良林), server: 194.124.35.40, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇸🇬 新加坡-1.02MB/s(Youtube:不良林), server: 81.90.189.18, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇸🇬 新加坡-203.4KB/s(Youtube:不良林), server: 194.124.35.40, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇸🇬 新加坡-546.1KB/s(Youtube:不良林), server: 81.90.189.18, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇸🇬 新加坡-650.2KB/s(Youtube:不良林), server: 194.124.35.48, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇸🇬 新加坡-1.12MB/s(Youtube:不良林), server: 217.197.161.164, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇸🇬 新加坡-382.2KB/s(Youtube:不良林), server: 194.124.35.48, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇸🇬 新加坡-376.1KB/s(Youtube:不良林), server: 194.124.35.48, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇸🇬 新加坡-422.1KB/s(Youtube:不良林), server: 194.124.35.42, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇸🇬 新加坡-373.7KB/s(Youtube:不良林), server: 81.90.189.18, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-556.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-322.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-884.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-310.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-685.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.50MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-551.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-314.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.02MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-203.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-546.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-650.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.12MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-382.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-376.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-422.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-373.7KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-5.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-556.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-322.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-884.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-310.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-685.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.50MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-551.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-314.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.02MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-203.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-546.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-650.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.12MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-382.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-376.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-422.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-373.7KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-556.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-322.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-884.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-310.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-685.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.50MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-551.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-314.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.02MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-203.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-546.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-650.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.12MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-382.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-376.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-422.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-373.7KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-5.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-556.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-322.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-884.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-310.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-685.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.50MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-551.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-314.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.02MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-203.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-546.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-650.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.12MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-382.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-376.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-422.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-373.7KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-556.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-322.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-884.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-310.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-685.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.50MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-551.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-314.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.02MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-203.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-546.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-650.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.12MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-382.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-376.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-422.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-373.7KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-556.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-322.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-884.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-310.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-685.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.50MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-551.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-314.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.02MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-203.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-546.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-650.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.12MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-382.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-376.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-422.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-373.7KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-556.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-322.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-884.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-310.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-685.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.50MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-551.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-314.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.02MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-203.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-546.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-650.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.12MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-382.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-376.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-422.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-373.7KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
