--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-3.20MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇮🇹 意大利-1.06MB/s(Youtube:不良林), server: 92.223.93.233, port: 1035, type: ss, cipher: chacha20-ietf-poly1305, password: )1N1E6v0SU_rGTpg}
-  - {name: 🇩🇪 德国-386.8KB/s(Youtube:不良林), server: 165.22.73.126, port: 23335, type: ss, cipher: aes-256-cfb, password: 7d99ae502227454ea998d71e4b62a388}
-  - {name: 🇺🇸 美国-2.23MB/s(Youtube:不良林), server: ss2.2046.gq, port: 4443, type: trojan, password: 794871c6-022b-4498-b816-296e8a581d86, sni: ss2.2046.gq, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-341.6KB/s(Youtube:不良林), server: 81.90.189.18, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇸🇬 新加坡-382.2KB/s(Youtube:不良林), server: 194.124.35.48, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇸🇬 新加坡-214.4KB/s(Youtube:不良林), server: 194.124.35.48, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-1.67MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-274.6KB/s(Youtube:不良林), server: x.alinkrelay.com, port: 13000, type: trojan, password: 0bcd3b39-b597-45c4-b1e6-79b5e43ba4af, sni: x.alinkrelay.com, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.78MB/s(Youtube:不良林), server: hn.zfnode.org, port: 30217, type: trojan, password: 63ec756d-1f6a-36c8-a9fd-025f4acfc74f, sni: hn.zfnode.org, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.49MB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: eecb88a3-d8c1-4fc3-bea0-8a4f13aa42be, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
   - {name: 🇸🇬 新加坡-376.1KB/s(Youtube:不良林), server: 194.124.35.48, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇫🇷 法国-1.53MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
   - {name: 🇺🇸 美国-3.10MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇺🇸 美国-2.33MB/s(Youtube:不良林), server: 38.68.135.19, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇨🇳 中国-347.5KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.20MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-1.06MB/s(Youtube:不良林)
-      - 🇩🇪 德国-386.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-341.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-382.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-214.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.67MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-274.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.49MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-376.1KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.53MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-347.5KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-3.20MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-1.06MB/s(Youtube:不良林)
-      - 🇩🇪 德国-386.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-341.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-382.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-214.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.67MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-274.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.49MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-376.1KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.53MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-347.5KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.20MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-1.06MB/s(Youtube:不良林)
-      - 🇩🇪 德国-386.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-341.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-382.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-214.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.67MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-274.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.49MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-376.1KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.53MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-347.5KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-3.20MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-1.06MB/s(Youtube:不良林)
-      - 🇩🇪 德国-386.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-341.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-382.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-214.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.67MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-274.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.49MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-376.1KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.53MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-347.5KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.20MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-1.06MB/s(Youtube:不良林)
-      - 🇩🇪 德国-386.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-341.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-382.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-214.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.67MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-274.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.49MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-376.1KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.53MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-347.5KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-3.20MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-1.06MB/s(Youtube:不良林)
-      - 🇩🇪 德国-386.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-341.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-382.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-214.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.67MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-274.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.49MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-376.1KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.53MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-347.5KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-3.20MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-1.06MB/s(Youtube:不良林)
-      - 🇩🇪 德国-386.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-341.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-382.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-214.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.67MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-274.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.49MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-376.1KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.53MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-347.5KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
