--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -6,15 +6,15 @@ log-level: info
 external-controller: :9090
 proxies:
   - {name: 🇨🇳 中国-1.64MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-650.9KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇨🇳 中国-3.13MB/s(Youtube:不良林), server: 120.233.186.204, port: 3383, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-3.15MB/s(Youtube:不良林), server: 211.72.35.158, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-650.9KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇨🇳 中国-566.0KB/s(Youtube:不良林), server: hn.zfnode.org, port: 30217, type: trojan, password: 63ec756d-1f6a-36c8-a9fd-025f4acfc74f, sni: hn.zfnode.org, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-2.60MB/s(Youtube:不良林), server: 211.72.35.158, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
   - {name: 🇨🇳 中国-4.99MB/s(Youtube:不良林), server: 120.233.186.204, port: 3383, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
   - {name: 🇺🇸 美国-419.5KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-5.92MB/s(Youtube:不良林), server: 120.233.186.250, port: 3383, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-217.6KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1012.0KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-322.7KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇯🇵 日本-807.7KB/s(Youtube:不良林), server: jp04-vm0.entry.rwesdhytjuftyhdafsdgfrh.club, port: 444, type: vmess, uuid: ea43d5df-84ec-3a33-b625-6c08ff6ece57, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: jp04-vm0.entry.rwesdhytjuftyhdafsdgfrh.club}}
+  - {name: 🇨🇳 中国-1.91MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
@@ -22,30 +22,30 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇨🇳 中国-1.64MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-650.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.13MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-3.15MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-650.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-566.0KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.60MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.99MB/s(Youtube:不良林)
       - 🇺🇸 美国-419.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-217.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1012.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-322.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-807.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.91MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
       - 🇨🇳 中国-1.64MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-650.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.13MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-3.15MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-650.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-566.0KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.60MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.99MB/s(Youtube:不良林)
       - 🇺🇸 美国-419.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-217.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1012.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-322.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-807.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.91MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
@@ -53,20 +53,20 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇨🇳 中国-1.64MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-650.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.13MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-3.15MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-650.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-566.0KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.60MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.99MB/s(Youtube:不良林)
       - 🇺🇸 美国-419.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-217.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1012.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-322.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-807.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.91MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-3.15MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.60MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
@@ -74,30 +74,30 @@ proxy-groups:
       - 🎯 全球直连
       - 🔰 节点选择
       - 🇨🇳 中国-1.64MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-650.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.13MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-3.15MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-650.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-566.0KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.60MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.99MB/s(Youtube:不良林)
       - 🇺🇸 美国-419.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-217.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1012.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-322.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-807.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.91MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - 🇨🇳 中国-1.64MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-650.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.13MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-3.15MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-650.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-566.0KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.60MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.99MB/s(Youtube:不良林)
       - 🇺🇸 美国-419.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-217.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1012.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-322.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-807.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.91MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
@@ -105,15 +105,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇨🇳 中国-1.64MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-650.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.13MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-3.15MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-650.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-566.0KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.60MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.99MB/s(Youtube:不良林)
       - 🇺🇸 美国-419.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-217.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1012.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-322.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-807.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.91MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,15 +130,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇨🇳 中国-1.64MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-650.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.13MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-3.15MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-650.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-566.0KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.60MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.99MB/s(Youtube:不良林)
       - 🇺🇸 美国-419.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-217.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1012.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-322.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-807.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.91MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
