--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -6,8 +6,8 @@ log-level: info
 external-controller: :9090
 proxies:
   - {name: 🇨🇳 中国-1.64MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-471.4KB/s(Youtube:不良林), server: hn.zfnode.org, port: 30217, type: trojan, password: 63ec756d-1f6a-36c8-a9fd-025f4acfc74f, sni: hn.zfnode.org, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.39MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.39MB/s(Youtube:不良林), server: hn.zfnode.org, port: 30217, type: trojan, password: 63ec756d-1f6a-36c8-a9fd-025f4acfc74f, sni: hn.zfnode.org, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-347.6KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
@@ -15,16 +15,16 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇨🇳 中国-1.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-471.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-347.6KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
       - 🇨🇳 中国-1.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-471.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-347.6KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
@@ -32,8 +32,8 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇨🇳 中国-1.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-471.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-347.6KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -45,16 +45,16 @@ proxy-groups:
       - 🎯 全球直连
       - 🔰 节点选择
       - 🇨🇳 中国-1.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-471.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-347.6KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - 🇨🇳 中国-1.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-471.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-347.6KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
@@ -62,8 +62,8 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇨🇳 中国-1.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-471.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-347.6KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -80,8 +80,8 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇨🇳 中国-1.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-471.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-347.6KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
